# advent-of-code-2023

./: .gitignore  .python-version  aa.py  pyproject.toml  utils.py
2023/day1/: ai.py  solution.py
2023/day10/: solution.py
2023/day11/: solution.py
2023/day12/: solution.py
2023/day14/: solution.py
2023/day15/: solution.py
2023/day17/: solution.py
2023/day18/: solution.py
2023/day20/: solution.py
2023/day22/: solution.py
2023/day23/: solution.py
2023/day24/: solution.py
2023/day4/: solution.py  task_input.py
2023/day5/: solution.py  task_input.py  task_input2.py
2023/day6/: solution.py
2023/day7/: solution.py
2023/day8/: solution.py  utils.py
2024/_template/: solution.py
2024/day1/: solution.py  task.md  task_input.py  utils.py
2024/day2/: solution.py  task.md  task_input.py
2024/day3/: solution.py  task.md  task_input.py
2024/day4/: solution.py  task.md  task_input.py
2024/day5/: solution.py  task.md  task_input.py
@template/: solution.py  task_input.py
day1/: solution.py  task_input.py
day13/: solution.py
day15/: task_input.py
day16/: solution.py
day19/: solution.py
day2/: solution.py  task_input.py
day21/: solution.py
day3/: solution.py  task_input.py
day4/: solution.py
day5/: solution.py
day9/: solution.py
